# lfv-gen

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/lfv_gen/: __init__.py  config.py  offline_experiment.py
src/lfv_gen/core/: policy.py  types.py
src/lfv_gen/data/: README.md  collect_and_save_data.py  dataset_zoo.py  download.py  rlds_utils.py
src/lfv_gen/data/infos/: README.md  gdrive_folders.txt  metaworld_left_cap2.txt  metaworld_right_cap2.txt  metaworld_top_cap2.txt
src/lfv_gen/envs/: setup_metaworld_env.py  wrap_env_as_pixel.py
src/lfv_gen/experiments/: README.md  collect_mw_data.py  inspect_mw_data.ipynb  mw_pixel_experiment.py  mw_state_experiment.py  offline_experiment.py  run_sac_metaworld.py  run_sb3_metaworld.py  run_sweep.py
src/lfv_gen/experiments/r3m_minimal/: yc_demo.ipynb
src/lfv_gen/experiments/utils/: data_utils.py  env_utils.py  log_utils.py
src/lfv_gen/scripts/: download_data.py  get_gdrive_files.py  print_infos.py
src/lfv_gen/sweeps/: run_dataset_size_sweep.py  run_sweep.py
tests/: test_init.py
tests/data/: test_collect_and_save_data.py
tests/envs/: test_dm_env_wrapper.py  test_setup_metaworld_env.py  test_wrap_env_as_pixel.py
