[project]
name = "lfv-gen"
version = "0.1.0"
description = "Benchmarking learning-from-videos methods"
authors = [
    {name = "Daniel CH Tan", email = "dtch1997@users.noreply.github.com"},
]
dependencies = [
    "metaworld @ git+https://github.com/Learning-from-Videos/Metaworld.git@master#egg=metaworld",
    "jax>=0.4.23",
    "dm-haiku>=0.0.11",
    "flax>=0.7.5",
    "optax>=0.1.8",
    "jam[dev] @ git+https://github.com/ethanluoyc/jam",
    "ipykernel>=6.29.0",
    "pip>=23.3.2",
    "matplotlib>=3.8.2",
    "tensorflow>=2.15.0",
    "moviepy>=1.0.3",
    # "cython<3",
    # "mujoco-py==2.0.2.5",
    "numpy>=1.26.3",
    "gdown>=5.0.0",
]
requires-python = ">=3.10,<3.11" # jam does not support 3.11
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
package-type = "library"
