[project]
name = "lfv-gen"
version = "0.1.0"
description = "Benchmarking learning-from-videos methods"
authors = [
    {name = "Daniel CH Tan", email = "dtch1997@users.noreply.github.com"},
]
dependencies = [
    "metaworld @ git+https://github.com/Learning-from-Videos/Metaworld.git@master#egg=metaworld",
    "jax>=0.4.23",
    "dm-haiku>=0.0.11",
    "flax>=0.7.5",
    "optax>=0.1.8",
    "jam[dev] @ git+https://github.com/ethanluoyc/jam",
    "ipykernel>=6.29.0",
    "pip>=23.3.2",
    "matplotlib>=3.8.2",
    "tensorflow>=2.15.0",
    "moviepy>=1.0.3",
    # "cython<3",
    # "mujoco-py==2.0.2.5",
    "numpy>=1.26.3",
    "gdown>=5.0.0",
    "wandb>=0.16.2",
    "simple-parsing>=0.1.4",
    "nbdime>=4.0.1",
    "pre-commit>=3.6.0",
    "pyright>=1.1.348",
    "pytest>=7.4.4",
    "envlogger[tfds]>=1.1",
    "dm-env-wrappers>=0.0.13",
    "tensorflow-datasets>=4.9.4",
    "rlds>=0.1.8",
]
requires-python = ">=3.10,<3.11" # jam does not support 3.11
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
sb3 = [
    "stable-baselines3>=2.2.1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
lint.shell = "pre-commit run --all-files"

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/lfv_gen/experiments",
]
